--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requires-python = ">=3.13"
 dependencies = [
     "hatchling>=1.27.0",
     "mlflow>=2.20.3",
+    "pygo-api>=0.1.2",
+    "polars>=1.29.0"
 ]
 
 # LINKS
@@ -42,7 +44,7 @@ check = [
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.14.0",
     "pytest-xdist>=3.6.1",
-    "ruff>=0.9.9",
+    "ruff>=0.9.9"
 ]
 commit = ["commitizen>=4.4.1", "pre-commit>=4.1.0"]
 dev = ["rust-just>=1.39.0"]
