--- a/.github/workflows/pull_data.yml
+++ b/.github/workflows/pull_data.yml
@@ -4,6 +4,10 @@ on:
   schedule:
     - cron: "0 0 1 * *"
 
+  push:
+    branches:
+      - setup_data_action
+
 jobs:
   pull_data:
     runs-on: ubuntu-latest
