--- a/.github/workflows/pull_data.yml
+++ b/.github/workflows/pull_data.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install dependencies from pyproject.toml
+        run: |
+          pip install .
+
       - name: Pull data
         run: |
           hatch run python src/data_acquisition/pull_data.py
