--- a/.github/workflows/pull_data.yml
+++ b/.github/workflows/pull_data.yml
@@ -1,3 +1,5 @@
+name: Pull Raw Yugioh Data - Monthly
+
 on:
   workflow_dispatch:
 
@@ -15,10 +17,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install dependencies from pyproject.toml
+      - name: Build Docker image
         run: |
-          pip install .
+          docker build \
+          -f ../../src/data_pull_api/Dockerfile \
+          -t yugioh-data-pull .
 
-      - name: Pull data
+      - name: Run Docker container
         run: |
-          python src/data_acquisition/pull_data.py
+          docker run --rm\
+          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -e AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }} \
+          yugioh-data-pull
