--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
-[project]
+[tool.poetry]
 name = "yugioh-deck-generator"
 version = "0.1.0"
 description = "Environment Setup, Dependency Installation, and Metadata for yugioh-deck-generator"
-authors = [
-    {name = "eric-castellanos",email = "ericcastellanos229@gmail.com"}
-]
+authors = ["eric-castellanos <ericcastellanos229@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.9"
+python = ">=3.9"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
