--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.pull_api.dependencies]
 polars = "^1.30.0"
 pygo-api = "^0.1.2"
+boto3 = "^1.34.0"
