--- a/.github/workflows/pull_data.yml
+++ b/.github/workflows/pull_data.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Docker container
         run: |
           docker run --rm \
-          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} \
           -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
           -e AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }} \
           yugioh-data-pull
