--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["eric-castellanos <ericcastellanos229@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = ">=3.9,<3.12"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -17,3 +17,12 @@ polars = "^1.30.0"
 pygo-api = "^0.1.2"
 boto3 = "^1.34.0"
 urllib3 = "<1.27"
+
+[tool.poetry.group.preprocessing.dependencies]
+pandas = "1.5.3"
+numba = "0.57.1"
+numpy = "1.23.5"
+ydata-profiling = "4.3.1"
+s3fs = "^2025.5.1"
+pyarrow = "^15.0.2"
+matplotlib = "3.6.3"
