--- a/src/preprocessing/EDA/Dockerfile
+++ b/src/preprocessing/EDA/Dockerfile
@@ -8,4 +8,21 @@ ENV PATH="/root/.local/bin:$PATH"
 WORKDIR /app
     
 COPY pyproject.toml poetry.lock ./
-RUN poetry export --only pull_api --without-hashes -f requirements.txt > requirements.txt
+RUN poetry export --only preprocessing --without-hashes -f requirements.txt > requirements.txt
+
+# Clean copy to /app
+COPY src/preprocessing/EDA/eda.py ./eda.py
+    
+# --- Stage 2: Run ---
+FROM python:3.11-slim as run
+    
+WORKDIR /app
+    
+# Install dependencies
+COPY --from=build /app/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
+    
+# Copy the script
+COPY --from=build /app/eda.py ./eda.py
+    
+CMD ["python", "eda.py"]
