--- a/infra/k8s/mlflow/secrets.yaml
+++ b/infra/k8s/mlflow/secrets.yaml
@@ -2,6 +2,19 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mlflow-secrets
+  namespace: mlflow
+  labels:
+    app: mlflow
+    component: secrets
 type: Opaque
 stringData:
-  backend_store_uri: postgresql://mlflowadmin:<your-password>@<rds-endpoint>:5432/mlflowdb
+  backend_store_uri: "postgresql://mlflow:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
+  artifact_root: "s3://${S3_BUCKET}/mlflow-artifacts"
+  aws_access_key_id: "${AWS_ACCESS_KEY_ID}"
+  aws_secret_access_key: "${AWS_SECRET_ACCESS_KEY}"
+  db_password: "${DB_PASSWORD}"
+  db_host: "${DB_HOST}"
+  db_port: "${DB_PORT}"
+  db_name: "${DB_NAME}"
+  s3_bucket: "${S3_BUCKET}"
+  aws_region: "us-east-1"
