--- a/infra/k8s/mlflow/service.yaml
+++ b/infra/k8s/mlflow/service.yaml
@@ -1,11 +1,50 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mlflow-service
+  name: mlflow
+  namespace: mlflow
+  labels:
+    app: mlflow
+    service: tracking
 spec:
-  type: LoadBalancer
   selector:
     app: mlflow
   ports:
-    - port: 80
+    - name: tracking
+      port: 5000
       targetPort: 5000
+      protocol: TCP
+    - name: http
+      port: 80
+      targetPort: 80
+      protocol: TCP
+  type: ClusterIP
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 10800  # 3 hours
+---
+# Ingress Service for external access
+apiVersion: v1
+kind: Service
+metadata:
+  name: mlflow-ingress
+  namespace: mlflow
+  labels:
+    app: mlflow
+    service: ingress
+spec:
+  selector:
+    app: mlflow
+  ports:
+    - name: http
+      port: 80
+      targetPort: 80
+      protocol: TCP
+  type: LoadBalancer
+  externalTrafficPolicy: Local
+  healthCheckNodePort: 30000
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 10800  # 3 hours
