--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -44,14 +44,15 @@ jobs:
 
       - name: Copy workflow files
         run: |
-          echo "Copying Terraform files from source directory"
-          mkdir -p ${GITHUB_WORKSPACE}/${{ inputs.source_dir }}
-          # Copy only the Terraform files from the source directory
-          cp -r ${GITHUB_WORKSPACE}/${{ inputs.source_dir }}/* ${GITHUB_WORKSPACE}/${{ inputs.source_dir }}/
-          # Make sure we have the correct directory structure
-          cd ${GITHUB_WORKSPACE}/${{ inputs.source_dir }}
-          pwd
-          ls -la
+          echo "SOURCE: ${GITHUB_WORKSPACE}/${{ inputs.source_dir }}"
+          echo "TARGET: ${GITHUB_WORKSPACE}/target-terraform"
+
+          if [ "${{ inputs.source_dir }}" != "." ]; then
+            mkdir -p "${GITHUB_WORKSPACE}/target-terraform"
+            cp -r "${GITHUB_WORKSPACE}/${{ inputs.source_dir }}/." "${GITHUB_WORKSPACE}/target-terraform/"
+          else
+            echo "ERROR: source_dir resolves to current working directory. Skipping copy."
+          fi
 
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
