account for manual run vs push

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -85,22 +85,29 @@ jobs:
 
       - name: Configure Terraform
         run: |
+          # Set fallback values if inputs are not defined (non-manual runs)
+          ENVIRONMENT="${{ github.event.inputs.environment || 'dev' }}"
+          CLUSTER_NAME="mlflow-cluster-${ENVIRONMENT}"
+
           terraform init
 
+          # Get subnet and VPC info from AWS
+          SUBNET_IDS=$(aws ec2 describe-subnets \
+            --query "Subnets[?Tags[?Key=='Environment' && Value=='${ENVIRONMENT}']].SubnetId" \
+            --output text)
+
+          VPC_ID=$(aws ec2 describe-vpcs \
+            --query "Vpcs[?Tags[?Key=='Environment' && Value=='${ENVIRONMENT}']].VpcId" \
+            --output text)
+
           # Create terraform.tfvars
-          cat > terraform.tfvars << EOF
-          environment = "${{ github.event.inputs.environment }}"
-          cluster_name = "mlflow-cluster-${{ github.event.inputs.environment }}"
-
-          # Get subnet IDs from AWS
-          SUBNET_IDS=$(aws ec2 describe-subnets --query 'Subnets[?Tags[?Key==`Environment` && Value==`${{ github.event.inputs.environment }}`]].SubnetId' --output text)
-          echo "subnet_ids = [${SUBNET_IDS}]" >> terraform.tfvars
-
-          # Get VPC ID from AWS
-          VPC_ID=$(aws ec2 describe-vpcs --query 'Vpcs[?Tags[?Key==`Environment` && Value==`${{ github.event.inputs.environment }}`]].VpcId' --output text)
-          echo "vpc_id = \"${VPC_ID}\"" >> terraform.tfvars
+          cat > terraform.tfvars <<EOF
+          environment = "${ENVIRONMENT}"
+          cluster_name = "${CLUSTER_NAME}"
+          subnet_ids = [${SUBNET_IDS}]
+          vpc_id = "${VPC_ID}"
           EOF
-        working-directory: ${{ github.workspace }}/${{ inputs.source_dir }}
+        working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'terraform' }}
 
       - name: Terraform Plan
         if: ${{ github.event.inputs.action == 'plan' }}
