provide correct path for terraform files

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -107,7 +107,7 @@ jobs:
           subnet_ids = [${SUBNET_IDS}]
           vpc_id = "${VPC_ID}"
           EOF
-        working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'terraform' }}
+        working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'infra/erraform' }}
 
       - name: Terraform Plan
         if: ${{ github.event.inputs.action == 'plan' }}
