--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,10 @@
 __pycache__/
 
 # Terraform
-infra/terraform/.terraform/
-infra/terraform/.terraform.lock.hcl
-infra/terraform/*.tfstate
-infra/terraform/*.tfstate.*
+*.terraform/
+*.terraform.lock.hcl
+*.tfstate
+*.tfstate.*
 terraform.tfvars
 *.tfvars
 .terragrunt-cache/
