Update workflow to handle existing VPCs more gracefully

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -164,6 +164,16 @@ jobs:
         working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'infra/terraform/vpc' }}
 
       - name: Get VPC Outputs
+        if: steps.check_vpc.outputs.VPC_EXISTS != 'true'
+        id: vpc_outputs
+        run: |
+          outputs=$(terraform output -json)
+          echo "VPC_ID=$(echo $outputs | jq -r '.vpc_id.value')" >> $GITHUB_OUTPUT
+          echo "PUBLIC_SUBNET_IDS=$(echo $outputs | jq -r '.public_subnets.value | @json')" >> $GITHUB_OUTPUT
+          echo "PRIVATE_SUBNET_IDS=$(echo $outputs | jq -r '.private_subnets.value | @json')" >> $GITHUB_OUTPUT
+        working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'infra/terraform/vpc' }}
+
+      - name: Get VPC Outputs
         id: get_vpc_outputs
         run: |
           outputs=$(terraform output -json)
