--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -141,16 +141,64 @@ jobs:
           echo "VPC_EXISTS=false" >> $GITHUB_OUTPUT
         working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'infra/terraform/vpc' }}
 
-      - name: Check VPC Limits
+      - name: Check VPC Limits and Cleanup
         run: |
           # Check VPC limits and clean up if necessary
-          echo "Checking VPC limits..."
+          echo "Checking VPC limits and cleaning up..."
+          
+          # Get all VPCs
           aws ec2 describe-vpcs --query 'Vpcs[*].[VpcId]' --output text | while read -r vpc_id; do
             echo "Found VPC: $vpc_id"
-            if [[ "$vpc_id" =~ ^vpc- ]]; then
-              echo "Deleting VPC: $vpc_id"
-              aws ec2 delete-vpc --vpc-id "$vpc_id"
-            fi
+            
+            # Get all subnets in this VPC
+            subnets=$(aws ec2 describe-subnets --filters "Name=vpc-id,Values=$vpc_id" --query 'Subnets[*].[SubnetId]' --output text)
+            for subnet in $subnets; do
+              echo "Deleting subnet: $subnet"
+              aws ec2 delete-subnet --subnet-id "$subnet"
+            done
+            
+            # Get all security groups in this VPC
+            sgs=$(aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$vpc_id" --query 'SecurityGroups[*].[GroupId]' --output text)
+            for sg in $sgs; do
+              # Skip the default security group
+              if [[ "$sg" != "sg-*default*" ]]; then
+                echo "Deleting security group: $sg"
+                aws ec2 delete-security-group --group-id "$sg"
+              fi
+            done
+            
+            # Get all internet gateways in this VPC
+            igs=$(aws ec2 describe-internet-gateways --filters "Name=attachment.vpc-id,Values=$vpc_id" --query 'InternetGateways[*].[InternetGatewayId]' --output text)
+            for ig in $igs; do
+              echo "Detaching internet gateway: $ig"
+              aws ec2 detach-internet-gateway --internet-gateway-id "$ig" --vpc-id "$vpc_id"
+              echo "Deleting internet gateway: $ig"
+              aws ec2 delete-internet-gateway --internet-gateway-id "$ig"
+            done
+            
+            # Get all route tables in this VPC
+            rts=$(aws ec2 describe-route-tables --filters "Name=vpc-id,Values=$vpc_id" --query 'RouteTables[*].[RouteTableId]' --output text)
+            for rt in $rts; do
+              # Skip the main route table
+              if [[ "$rt" != "rtb-*main*" ]]; then
+                echo "Deleting route table: $rt"
+                aws ec2 delete-route-table --route-table-id "$rt"
+              fi
+            done
+            
+            # Get all network ACLs in this VPC
+            nacls=$(aws ec2 describe-network-acls --filters "Name=vpc-id,Values=$vpc_id" --query 'NetworkAcls[*].[NetworkAclId]' --output text)
+            for n in $nacls; do
+              # Skip the default network ACL
+              if [[ "$n" != "acl-*default*" ]]; then
+                echo "Deleting network ACL: $n"
+                aws ec2 delete-network-acl --network-acl-id "$n"
+              fi
+            done
+            
+            # Finally delete the VPC
+            echo "Deleting VPC: $vpc_id"
+            aws ec2 delete-vpc --vpc-id "$vpc_id"
           done
         working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'infra/terraform/vpc' }}
 
