--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -158,10 +158,10 @@ jobs:
             done
             
             # Get all security groups in this VPC
-            sgs=$(aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$vpc_id" --query 'SecurityGroups[*].[GroupId]' --output text)
-            for sg in $sgs; do
+            sgs=$(aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$vpc_id" --query 'SecurityGroups[*].[GroupId,GroupName]' --output text)
+            while read -r sg name; do
               # Skip the default security group
-              if [[ "$sg" != "sg-*default*" ]]; then
+              if [[ "$name" != "default" ]]; then
                 echo "Deleting security group: $sg"
                 aws ec2 delete-security-group --group-id "$sg"
               fi
@@ -187,10 +187,10 @@ jobs:
             done
             
             # Get all network ACLs in this VPC
-            nacls=$(aws ec2 describe-network-acls --filters "Name=vpc-id,Values=$vpc_id" --query 'NetworkAcls[*].[NetworkAclId]' --output text)
-            for n in $nacls; do
+            nacls=$(aws ec2 describe-network-acls --filters "Name=vpc-id,Values=$vpc_id" --query 'NetworkAcls[*].[NetworkAclId,IsDefault]' --output text)
+            while read -r n is_default; do
               # Skip the default network ACL
-              if [[ "$n" != "acl-*default*" ]]; then
+              if [[ "$is_default" != "true" ]]; then
                 echo "Deleting network ACL: $n"
                 aws ec2 delete-network-acl --network-acl-id "$n"
               fi
